# rust-http-framework

./: Cargo.toml  README.md
crates/http-types/: Cargo.toml
crates/http-types/src/: lib.rs  message.rs  method.rs  request.rs  response.rs  search_params.rs  uri.rs  uri_parser.rs
crates/route-attribute-macro/: Cargo.toml
crates/route-attribute-macro/src/: arguments.rs  lib.rs
crates/route-macro-attribute/: Cargo.toml
crates/route-macro-attribute/src/: lib.rs
crates/routes/: Cargo.toml
crates/routes/src/: lib.rs
examples/basic-usage/: Cargo.toml
examples/basic-usage/src/: main.rs
src/: lib.rs  main.rs
src/lib/: message.rs  method.rs  mod.rs  request.rs  response.rs  server.rs  status_codes.rs
